--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Hola Mundo</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div class="container">
